--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                         <td>
 
-                           <input type="number" class="form-control" placeholder="Total Hyd" onkeyup="calcu()" id="hydtt">
+                           <input type="text" class="form-control" placeholder="Total Hyd" id="hydtt" readonly>
 
                         </td>
 
