Replace s2.js with index.js in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <script src="bootstrap.bundle.min.js"></script>
 
-<script language="JavaScript" type="text/javascript" src="s2.js"></script>
+<script language="JavaScript" type="text/javascript" src="index.js"></script>
 
   </head>
 
