Set input fields to readonly for total calculations
Changed input fields to readonly for various totals.

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
                         <td>
 
-                           <input type="number" class="form-control" placeholder="Total RDM2" onkeyup="calcu()" id="rdmtt">
+                           <input type="number" class="form-control" placeholder="Total RDM2"  id="rdmtt" reaonly>
 
                         </td>
 
@@ -232,7 +232,7 @@
 
                         <td>
 
-                           <input type="number" class="form-control" placeholder="Total MDSol" onkeyup="calcu()" id="mdstt">
+                           <input type="number" class="form-control" placeholder="Total MDSol"  id="mdstt"  readonly>
 
                         </td>
 
@@ -268,7 +268,7 @@
 
                         <td>
 
-                           <input type="number" class="form-control" placeholder="total topo" onkeyup="calcu()" id="topott">
+                           <input type="number" class="form-control" placeholder="total topo"  id="topott" readonly>
 
                         </td>
 
@@ -438,7 +438,7 @@
 
                         <td>
 
-                           <input type="number" class="form-control" placeholder="note MDC1 /20" onkeyup="calcu()" id="mdctt">
+                           <input type="number" class="form-control" placeholder="note MDC1 /20"  id="mdctt" onlyread>
 
                         </td>
 
