--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="assets/styles.css" rel="stylesheet">
 </head>
 <body>
+  <div class="container">
   <header class="bg-dark text-white">
     <nav class="container navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand d-flex align-items-center" href="#">
