--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <strong>CalcInfo</strong>
         </a>
         <div class="ms-auto">
-          <a class="btn btn-outline-light btn-sm me-1" href="index.html"><b>S6</b></a>
+          <a class="btn btn-outline-light btn-sm me-1" href="s6.html"><b>S6</b></a>
           <a class="btn btn-outline-light btn-sm me-1" href="s3.html"><b>S7</b></a>
           <a class="btn btn-outline-light btn-sm" href="s4.html"><b>S8</b></a>
         </div>
