--- a/s6.html
+++ b/s6.html
@@ -82,7 +82,7 @@
           <!-- Hydraulique 2 -->
           <div class="card">
             <div class="subject">
-              <span>Hydraulique 1</span>
+              <span>Hydraulique 2</span>
               <input id="hydtd" type="number" min="0" max="20" step="0.01" placeholder="Note TD /20" oninput="calcu()">
               <input id="hydctrl" type="number" min="0" max="20" step="0.01" placeholder="Control /20" oninput="calcu()">
               <input id="hydtt" class="average" readonly placeholder="Total Hyd">
@@ -92,7 +92,7 @@
           <!-- Béton Armé 2 -->
           <div class="card">
             <div class="subject">
-              <span>Béton Armé</span>
+              <span>Béton Armé 2</span>
               <input id="batd" type="number" min="0" max="20" step="0.01" placeholder="Note TD /20" oninput="calcu()">
               <input id="bactrl" type="number" min="0" max="20" step="0.01" placeholder="Control /20" oninput="calcu()">
               <input id="batt" class="average" readonly placeholder="Total BA">
@@ -102,7 +102,7 @@
           <!-- RDM 3 -->
           <div class="card">
             <div class="subject">
-              <span>RDM2</span>
+              <span>RDM3</span>
               <input id="rdmtd" type="number" min="0" max="20" step="0.01" placeholder="Note TD /20" oninput="calcu()">
               <input id="rdmctrl" type="number" min="0" max="20" step="0.01" placeholder="Control /20" oninput="calcu()">
               <input id="rdmtt" class="average" readonly placeholder="Total RDM2">
@@ -113,7 +113,7 @@
           <div class="card">
             <div class="subject">
 
-<span>MDSol</span>
+<span>MDSol 2</span>
               <input id="mdstd" type="number" min="0" max="20" step="0.01" placeholder="Note TD /20" oninput="calcu()">
               <input id="mdsctrl" type="number" min="0" max="20" step="0.01" placeholder="Control /20" oninput="calcu()">
               <input id="mdstp" type="number" min="0" max="20" step="0.01" placeholder="Note TP /20" oninput="calcu()">
@@ -124,7 +124,7 @@
           <!-- Topo 2 -->
           <div class="card">
             <div class="subject">
-              <span>Topo1</span>
+              <span>Topo2</span>
               <input id="topoctrl" type="number" min="0" max="20" step="0.01" placeholder="Control /20" oninput="calcu()">
               <input id="topotp" type="number" min="0" max="20" step="0.01" placeholder="Note TP /20" oninput="calcu()">
               <input id="topott" class="average" readonly placeholder="Total Topo">
@@ -134,7 +134,7 @@
           <!-- EME -->
           <div class="card">
             <div class="subject">
-              <span>PGC</span>
+              <span>EME</span>
               <input id="pgctt" type="number" min="0" max="20" step="0.01" placeholder="note PGC /20" oninput="calcu()">
             </div>
           </div>
@@ -142,7 +142,7 @@
           <!-- DAO 1 -->
           <div class="card">
             <div class="subject">
-              <span>Dessin</span>
+              <span>DAO 1</span>
               <input id="dessintt" type="number" min="0" max="20" step="0.01" placeholder="note Dessin /20" oninput="calcu()">
             </div>
           </div>
@@ -150,7 +150,7 @@
           <!-- Transfer Thermique -->
           <div class="card">
             <div class="subject">
-              <span>Anglais</span>
+              <span>Transfer Thermique</span>
               <input id="anglaistt" type="number" min="0" max="20" step="0.01" placeholder="note Anglais /20" oninput="calcu()">
             </div>
           </div>
@@ -158,7 +158,7 @@
           <!-- MDC 2 -->
           <div class="card">
             <div class="subject">
-              <span>MDC1</span>
+              <span>MDC 2</span>
               <input id="mdctp" type="number" min="0" max="20" step="0.01" placeholder="note TP /20" oninput="calcu()">
               <input id="mdctrl" type="number" min="0" max="20" step="0.01" placeholder="control /20" oninput="calcu()">
               <input id="mdctt" class="average" readonly placeholder="note MDC1 /20">
@@ -168,7 +168,7 @@
           <!-- stage en entrprise -->
           <div class="card">
             <div class="subject">
-              <span>Géologie</span>
+              <span>stage en entrprise</span>
               <input id="geott" type="number" min="0" max="20" step="0.01" placeholder="note Geologie /20" oninput="calcu()">
             </div>
           </div>
