--- a/s6.html
+++ b/s6.html
@@ -135,7 +135,7 @@
           <div class="card">
             <div class="subject">
               <span>EME</span>
-              <input id="pgctt" type="number" min="0" max="20" step="0.01" placeholder="note PGC /20" oninput="calcu()">
+              <input id="pgctt" type="number" min="0" max="20" step="0.01" placeholder="note EME /20" oninput="calcu()">
             </div>
           </div>
 
@@ -143,7 +143,7 @@
           <div class="card">
             <div class="subject">
               <span>DAO 1</span>
-              <input id="dessintt" type="number" min="0" max="20" step="0.01" placeholder="note Dessin /20" oninput="calcu()">
+              <input id="dessintt" type="number" min="0" max="20" step="0.01" placeholder="note DAO 1 /20" oninput="calcu()">
             </div>
           </div>
 
@@ -151,7 +151,7 @@
           <div class="card">
             <div class="subject">
               <span>Transfer Thermique</span>
-              <input id="anglaistt" type="number" min="0" max="20" step="0.01" placeholder="note Anglais /20" oninput="calcu()">
+              <input id="anglaistt" type="number" min="0" max="20" step="0.01" placeholder="note Transfer Thermique /20" oninput="calcu()">
             </div>
           </div>
 
@@ -161,7 +161,7 @@
               <span>MDC 2</span>
               <input id="mdctp" type="number" min="0" max="20" step="0.01" placeholder="note TP /20" oninput="calcu()">
               <input id="mdctrl" type="number" min="0" max="20" step="0.01" placeholder="control /20" oninput="calcu()">
-              <input id="mdctt" class="average" readonly placeholder="note MDC1 /20">
+              <input id="mdctt" class="average" readonly placeholder="note MDC 2 /20">
             </div>
           </div>
 
@@ -169,7 +169,7 @@
           <div class="card">
             <div class="subject">
               <span>stage en entrprise</span>
-              <input id="geott" type="number" min="0" max="20" step="0.01" placeholder="note Geologie /20" oninput="calcu()">
+              <input id="geott" type="number" min="0" max="20" step="0.01" placeholder="note Stage /20" oninput="calcu()">
             </div>
           </div>
 
