--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
       min-width: 120px;
       font-weight: bold;
     }
+    .custom-square {
+    width: 40px !important;    
+    height: 40px !important;  
+    display: inline-flex !important;
+    align-items: center;      
+    justify-content: center;  
+    margin-left: 15px !important; 
+    border-radius: 8px;       
+    padding: 0 !important;
+    }
+    font-size: 14px;          
     .subject input {
       flex: 1 1 100px;
       max-width: 120px;
