--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       font-weight: bold;
     }
     .custom-square {
-    width: 40px !important;    
-    height: 40px !important;  
-    display: inline-flex !important;
+    width: 40px;    
+    height: 40px;  
+    display: inline-flex;
     align-items: center;      
     justify-content: center;  
-    margin-left: 15px !important; 
+    margin-left: 15px; 
     border-radius: 8px;       
-    padding: 0 !important;
+    padding: 0;
     }
     font-size: 14px;          
     .subject input {
