--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
           <img src="logo.png" alt="logo" class="me-2 logo-img">
           <strong>CalcInfo</strong>
         </a>
-       <div class="ms-auto d-flex align-items-center">
-  <a class="btn btn-outline-light btn-sm me-3 custom-square-btn" href="s6.html"><b>S6</b></a>
-  <a class="btn btn-outline-light btn-sm me-3 custom-square-btn" href="s3.html"><b>S7</b></a>
-  <a class="btn btn-outline-light btn-sm custom-square-btn" href="s4.html"><b>S8</b></a>
-     </div>
+       < <div class="ms-auto">
+          <a class="btn btn-outline-light btn-sm me-1" href="s6.html"><b>S6</b></a>
+          <a class="btn btn-outline-light btn-sm me-1" href="s3.html"><b>S7</b></a>
+          <a class="btn btn-outline-light btn-sm" href="s4.html"><b>S8</b></a>
+        </div>
       </nav>
     </header>
 
