--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Semester 5 — CalcInfo</title>
+  <title>Semester 6 — CalcInfo</title>
   <link rel="icon" type="image/x-icon" href="ico.ico">
   <link href="bootstrap.min.css" rel="stylesheet">
   <link href="assets/styles.css" rel="stylesheet">
@@ -28,7 +28,6 @@
       min-width: 120px;
       font-weight: bold;
     }
-    font-size: 14px;          
     .subject input {
       flex: 1 1 100px;
       max-width: 120px;
@@ -67,7 +66,7 @@
           <img src="logo.png" alt="logo" class="me-2 logo-img">
           <strong>CalcInfo</strong>
         </a>
-       < <div class="ms-auto">
+        <div class="ms-auto">
           <a class="btn btn-outline-light btn-sm me-1" href="s6.html"><b>S6</b></a>
           <a class="btn btn-outline-light btn-sm me-1" href="s3.html"><b>S7</b></a>
           <a class="btn btn-outline-light btn-sm" href="s4.html"><b>S8</b></a>
@@ -78,7 +77,7 @@
     <main class="container my-4">
       <div class="card shadow-sm">
         <div class="card-body">
-          <h3 class="card-title">Semester 5 — Calculator</h3>
+          <h3 class="card-title">Semester 6 — Calculator</h3>
 
           <!-- Hydraulique 1 -->
           <div class="card">
@@ -90,17 +89,17 @@
             </div>
           </div>
 
-          <!-- Béton Armé -->
+          <!-- Béton Armé 1-->
           <div class="card">
             <div class="subject">
-              <span>Béton Armé</span>
+              <span>Béton Armé 1</span>
               <input id="batd" type="number" min="0" max="20" step="0.01" placeholder="Note TD /20" oninput="calcu()">
               <input id="bactrl" type="number" min="0" max="20" step="0.01" placeholder="Control /20" oninput="calcu()">
               <input id="batt" class="average" readonly placeholder="Total BA">
             </div>
           </div>
 
-          <!-- RDM2 -->
+          <!-- RDM 2 -->
           <div class="card">
             <div class="subject">
               <span>RDM2</span>
@@ -110,11 +109,11 @@
             </div>
           </div>
 
-          <!-- MDSol -->
+          <!-- MDSol 1 -->
           <div class="card">
             <div class="subject">
 
-<span>MDSol</span>
+<span>MDSol 1</span>
               <input id="mdstd" type="number" min="0" max="20" step="0.01" placeholder="Note TD /20" oninput="calcu()">
               <input id="mdsctrl" type="number" min="0" max="20" step="0.01" placeholder="Control /20" oninput="calcu()">
               <input id="mdstp" type="number" min="0" max="20" step="0.01" placeholder="Note TP /20" oninput="calcu()">
@@ -122,7 +121,7 @@
             </div>
           </div>
 
-          <!-- Topo1 -->
+          <!-- Topo 1 -->
           <div class="card">
             <div class="subject">
               <span>Topo1</span>
@@ -156,20 +155,20 @@
             </div>
           </div>
 
-          <!-- MDC1 -->
+          <!-- MDC 1 -->
           <div class="card">
             <div class="subject">
-              <span>MDC1</span>
+              <span>MDC 1</span>
               <input id="mdctp" type="number" min="0" max="20" step="0.01" placeholder="note TP /20" oninput="calcu()">
               <input id="mdctrl" type="number" min="0" max="20" step="0.01" placeholder="control /20" oninput="calcu()">
-              <input id="mdctt" class="average" readonly placeholder="note MDC1 /20">
+              <input id="mdctt" class="average" readonly placeholder="note MDC 1 /20">
             </div>
           </div>
 
-          <!-- Géologie -->
+          <!-- Geologie -->
           <div class="card">
             <div class="subject">
-              <span>Géologie</span>
+              <span>Geologie</span>
               <input id="geott" type="number" min="0" max="20" step="0.01" placeholder="note Geologie /20" oninput="calcu()">
             </div>
           </div>
