--- a/s6.html
+++ b/s6.html
@@ -151,7 +151,9 @@
           <div class="card">
             <div class="subject">
               <span>Transfer Thermique</span>
-              <input id="anglaistt" type="number" min="0" max="20" step="0.01" placeholder="note Transfer Thermique /20" oninput="calcu()">
+              <input id="tttd" type="number" min="0" max="20" step="0.01" placeholder="Note TD /20" oninput="calcu()">
+              <input id="ttctrl" type="number" min="0" max="20" step="0.01" placeholder="control /20" oninput="calcu()">
+              <input id="anglaistt" class="average" readonly placeholder="Total Transfer thermique">
             </div>
           </div>
 
