--- a/s6.html
+++ b/s6.html
@@ -153,7 +153,7 @@
               <span>Transfer Thermique</span>
               <input id="tttd" type="number" min="0" max="20" step="0.01" placeholder="Note TD /20" oninput="calcu()">
               <input id="ttctrl" type="number" min="0" max="20" step="0.01" placeholder="control /20" oninput="calcu()">
-              <input id="anglaistt" class="average" readonly placeholder="Total Transfer thermique">
+              <input id="tttt" class="average" readonly placeholder="Total Transfer Thermique">
             </div>
           </div>
 
